fix some bug at ticket service
